--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
 cleanup:
-  ✔ update devcontainer @done(24-09-07 04:07)
   ☐ remove old db copies
-  ☐ deprecate/inavtivate proto stuff for now
+  ☐ fix migration tasks
 
 refresh readme:
   ☐ basic instructions and how to run
   ☐ settle on goals of this phase of the project
+  ☐ flesh out db migrate workflow
 
 mvp:
   ☐ web app displaying the schema visualization
@@ -18,13 +18,16 @@ reliable deployment:
   ☐ choose a hosting solution
   ☐ test deployment
 
-  Archive:
-    ✘ general: @cancelled(24-09-07 04:06) @project(old)
-    ✘ add tests @cancelled(24-09-07 04:06) @project(old)
-    ✘ move `schema/` dir outside the `ent` dir @cancelled(24-09-07 04:06) @project(old)
-    ✘ add more docs @cancelled(24-09-07 04:06) @project(old)
-    ✘ schema improvements: @cancelled(24-09-07 04:06) @project(old)
-    ✘ change enums to all caps @cancelled(24-09-07 04:06) @project(old)
-    ✘ change all `desc` fields to type []string @cancelled(24-09-07 04:06) @project(old)
-    ✘ data: @cancelled(24-09-07 04:06) @project(old)
-    ✘ fix script field on deep speech @cancelled(24-09-07 04:06) @project(old)
+Archive:
+  ✔ update devcontainer @done(24-09-07 04:07) @project(cleanup)
+  ✔ fix run tasks for entgen and gqlgen @done(24-09-07 12:50) @project(cleanup)
+  ✔ deprecate/remove/inactivate proto stuff for now @done(24-09-07 12:50) @project(cleanup)
+  ✘ general: @cancelled(24-09-07 04:06) @project(old)
+  ✘ add tests @cancelled(24-09-07 04:06) @project(old)
+  ✘ move `schema/` dir outside the `ent` dir @cancelled(24-09-07 04:06) @project(old)
+  ✘ add more docs @cancelled(24-09-07 04:06) @project(old)
+  ✘ schema improvements: @cancelled(24-09-07 04:06) @project(old)
+  ✘ change enums to all caps @cancelled(24-09-07 04:06) @project(old)
+  ✘ change all `desc` fields to type []string @cancelled(24-09-07 04:06) @project(old)
+  ✘ data: @cancelled(24-09-07 04:06) @project(old)
+  ✘ fix script field on deep speech @cancelled(24-09-07 04:06) @project(old)
