--- a/TODO
+++ b/TODO
@@ -1,24 +1,28 @@
 cleanup:
   ☐ move db connection string to env variable
+  ☐ revisit readme
 
-refresh readme:
-  ☐ settle on goals of this phase of the project
+cicd:
+  ☐ add test step to go workflow
+  ☐ add test coverage report to go workflow
 
-mvp:
-  ☐ web app displaying the schema visualization
+frontend:
+  ☐ link to repo include tldr
 
-  popper:
-    ☐ update tests
-    ☐ link into dev workflow in root tasks.toml file
+schema:
+  ☐ audit existing schema
+  ☐ documentation
 
-reliable dev environment:
-  ☐ figure out dev dependencies
-
-reliable deployment:
-  ☐ choose a hosting solution
-  ☐ test deployment
+popper:
+  ☐ update tests
+  ☐ link into dev workflow in root tasks.toml file
 
 Archive:
+  ✘ settle on goals of this phase of the project @cancelled(24-09-12 06:49) @project(refresh readme)
+  ✔ web app displaying the schema visualization @done(24-09-12 06:32) @project(mvp)
+  ✔ figure out dev dependencies -- devcontainer @done(24-09-12 06:32) @project(reliable dev environment)
+  ✔ choose a hosting solution -- digital ocean app platform @done(24-09-12 06:31) @project(reliable deployment)
+  ✔ test deployment @done(24-09-12 06:31) @project(reliable deployment)
   ✔ install deps during devcontainer creation @done(24-09-12 01:06) @project(reliable dev environment)
   ✔ test run commands in devcontainer @done(24-09-08 08:01) tested in ubuntu devcontainer on codespace @project(reliable dev environment)
   ✔ deprecate old logs package @done(24-09-08 00:36) @project(cleanup)
