--- a/TODO
+++ b/TODO
@@ -14,6 +14,46 @@ popper:
   ☐ implement missing tests and fix skipped tests
   ☐ link into dev workflow in root tasks.toml file
 
+schema-overhaul:
+  AbilityScore:
+    ✔ populate entities @done(24-09-19 05:48)
+  AbilityBonus:
+    ☐ define schema
+    ☐ populate entities
+  Alignment:
+    ✔ populate entities @done(24-09-19 05:48)
+  Skill:
+    ✔ populate entities @done(24-09-19 05:48)
+    ✔ populate edges @done(24-09-19 05:48)
+  DamageType:
+    ✔ populate entities @done(24-09-19 05:47)
+  MagicSchool:
+    ✔ populate entities @done(24-09-19 05:48)
+  Language:
+    ✔ populate entities @done(24-09-19 05:48)
+  Race:
+    ✔ populate entities @done(24-09-19 05:49)
+    ☐ populate edges
+      ☐ ability_bonuses
+      ☐ starting_proficiencies
+      ☐ starting_proficiency_options
+      ☐ languages
+      ☐ language_options
+      ☐ traits
+      ☐ subraces
+  Class:
+  Condition:
+  Feat:
+  Feature:
+  Subrace:
+  Trait:
+  WeaponProperty:
+  Rule:
+    ✔ entities @done(24-09-19 07:16)
+    ✔ edges @done(24-09-19 07:17)
+  RuleSection:
+    ✔ entities @done(24-09-19 07:17)
+
 Archive:
   ✔ move db connection string to env variable @done(24-09-12 09:15) @project(cleanup)
   ✔ add test step to go workflow @done(24-09-12 09:14) @project(cicd)
