feat: subrace schema and pop

--- a/TODO
+++ b/TODO
@@ -18,8 +18,8 @@ schema-overhaul:
   Entities:
     ✔ AbilityBonus @done(24-09-19 10:18)
     ☐ Prerequisite
-    ☐ Proficiency
-    ☐ Option
+    ✔ Proficiency @done(24-09-24 22:48)
+    ✔ Option @done(24-09-24 22:48)
     ✔ AbilityScore @done(24-09-19 09:07)
     ✔ Alignment @done(24-09-19 09:08)
     ☐ Class
@@ -29,7 +29,7 @@ schema-overhaul:
     ✔ Coin @done(24-09-19 09:30)
     ✔ Condition @done(24-09-19 09:08)
     ✔ DamageType @done(24-09-19 09:08)
-    ☐ Equipment
+    ✔ Equipment @done(24-09-24 22:47)
       ✔ Weapon @done(24-09-20 01:23)
       ✔ Tool @done(24-09-24 05:27)
       ✔ Vehicle @done(24-09-24 05:27)
@@ -41,12 +41,12 @@ schema-overhaul:
     ☐ Feature
     ✔ Language @done(24-09-19 09:08)
     ✔ MagicSchool @done(24-09-19 09:08)
-    ☐ Race
+    ✔ Race @done(24-09-24 22:48)
     ✔ Rule @done(24-09-19 09:08)
     ✔ RuleSection @done(24-09-19 09:08)
     ✔ Skill @done(24-09-19 09:08)
-    ☐ Subrace
-    ☐ Trait
+    ✔ Subrace @done(24-09-24 22:47)
+    ✔ Trait @done(24-09-24 22:47)
     ✔ WeaponProperty @done(24-09-19 09:08)
   Edges:
     ✔ AbilityBonus <> AbilityScore @done(24-09-19 10:20)
